Update comments on stylesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ nav {
     color:white;
 }
 
+/* Set on body, transforms meny off-screen */
 .menu-hidden nav {
     transform: translateX(-400px);
     transition: transform 0.2s;
