--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,11 @@ nav {
     font-size: 25pt;
 }
 
+.searchbox {
+    width: 100%;
+    font-size: 20px;
+}
+
 @media (max-width: 500px) {
     .main-heading {
         font-size: 12pt;
